# lol-win-predictor

./: README.md
api/: .gitignore  pyproject.toml
api/src/: main.py
api/src/api/: schemas.py
api/src/api/routes/: __init__.py  health.py  predictions.py
api/src/core/: config.py  state.py
api/src/ml/: predictor.py
api/src/model/: selected_features.json
api/tests/: conftest.py  test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: PredictionForm.vue
frontend/src/features/prediction/: predictionFields.js  usePredictionForm.js
frontend/src/services/: predictionApi.js
ml/: lol-win-predictor-PedroMoraes.ipynb  train_model.py
ml/artifacts/: lol_model.pkl  metrics.json
tests/: test_model.py
